# autoloop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
autoloop/: __init__.py  backends.py
examples/prompt_optimization/: program.md  run.py  system_prompt.md
